--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -63,6 +63,10 @@
             top: 390px;
          }
       }
+
+      .middle {
+         height: 70px;
+      }
    }
 
    @media (max-width: 360px) {
